src/test/ui/const-generics/issues/issue-74950.min.stderr
error: `Inner` is forbidden as the type of a const generic parameter
  --> $DIR/issue-74950.rs:17:23
   |
LL | struct Outer<const I: Inner>;
   |                       ^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#![feature(adt_const_params)]`

error: `Inner` is forbidden as the type of a const generic parameter
  --> $DIR/issue-74950.rs:17:23
   |
LL | struct Outer<const I: Inner>;
   |                       ^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#![feature(adt_const_params)]`

error: `Inner` is forbidden as the type of a const generic parameter
  --> $DIR/issue-74950.rs:17:23
   |
LL | #[derive(PartialEq, Eq)]
   |          --------- in this derive macro expansion
LL | struct Outer<const I: Inner>;
   |                       ^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#![feature(adt_const_params)]`
   = note: this error originates in the derive macro `PartialEq` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `Inner` is forbidden as the type of a const generic parameter
  --> $DIR/issue-74950.rs:17:23
   |
LL | struct Outer<const I: Inner>;
   |                       ^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#![feature(adt_const_params)]`

error: `Inner` is forbidden as the type of a const generic parameter
  --> $DIR/issue-74950.rs:17:23
   |
LL | #[derive(PartialEq, Eq)]
   |                     -- in this derive macro expansion
LL | struct Outer<const I: Inner>;
   |                       ^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#![feature(adt_const_params)]`
   = note: this error originates in the derive macro `Eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 5 previous errors

